# base16-zathura

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  shell.nix
.github/workflows/: update.yml
build_schemes/: base16-3024.config  base16-apathy.config  base16-ashes.config  base16-atelier-cave.config  base16-atelier-dune.config  base16-atelier-estuary.config  base16-atelier-forest.config  base16-atelier-heath.config  base16-atelier-lakeside.config  base16-atelier-plateau.config  base16-atelier-savanna.config  base16-atelier-seaside.config  base16-atelier-sulphurpool.config  base16-bespin.config  base16-brewer.config  base16-bright.config  base16-chalk.config  base16-circus.config  base16-codeschool.config  base16-cupcake.config  base16-darktooth.config  base16-default-dark.config  base16-default-light.config  base16-dracula.config  base16-eighties.config  base16-embers.config  base16-flat.config  base16-github.config  base16-google-dark.config  base16-google-light.config  base16-grayscale-dark.config  base16-grayscale-light.config  base16-green-screen.config  base16-gruvbox-dark-hard.config  base16-gruvbox-dark-medium.config  base16-gruvbox-dark-pale.config  base16-gruvbox-dark-soft.config  base16-gruvbox-light-hard.config  base16-gruvbox-light-medium.config  base16-gruvbox-light-soft.config  (+40 more)
build_schemes/colors/: base16-apathy.config  base16-apprentice.config  base16-ashes.config  base16-atlas.config  base16-ayu-dark.config  base16-ayu-light.config  (+93 more)
nix/: sources.json
templates/: config.yaml  default.mustache
(+231 files in other folders)
